--- a/core/template/dashboard/css/digiFlipClock.css
+++ b/core/template/dashboard/css/digiFlipClock.css
@@ -1,9 +1,6 @@
 #plugin_container {
-    width:414px;
-    height:210px;
     position:relative;
     overflow:hidden;
-    font-family:Arial, Verdana, Tahoma, Helvetica, sans-serif;
 }
 
 #plugin_container p {
@@ -12,21 +9,57 @@
 }
 
 #digital_container {
-    width:404px;
-    height:200px;
 	position:absolute;
     top:5px;
     left:5px;
     z-index:100;
 }
 
-#back_bg, #dots_bg {
+#dots_bg {
     width:100%;
     height:100%;
     position:absolute;
-    top:5;
-    left:5;
+    z-index:111;
+}
+
+#dots2_bg {
+    width:100%;
+    height:100%;
+    position:absolute;
+	margin-left:204px;
+    z-index:111;
+}
+
+#back_bg {
+    width:100%;
+    height:100%;
+    position:absolute;
     z-index:110;
+}
+
+#backseconds_bg {
+    width:305px;
+    height:100%;
+    position:absolute;
+	overflow: hidden;
+    z-index:110;
+}
+
+#backseconds2_bg {
+    width:100%;
+    height:100%;
+    position:absolute;
+	overflow: hidden;
+	margin-left:305px;
+	z-index:109;
+}
+
+#backseconds2b_bg {
+    width:100%;
+    height:100%;
+    position:absolute;
+	margin-left:-101px;
+	z-index:109;
 }
 
 #date {
@@ -41,23 +74,21 @@
     margin-left:0px;
 }
 
-#hours, #minutes {
+#hours, #minutes, #seconds {
     width:200px;
     height:200px;
     float:left;
     position:relative;
 }
 
-#minutes {
+#minutes, #seconds {
     margin-left:4px;
 }
 
-#hours_bg, #minutes_bg {
+#hours_bg, #minutes_bg, #seconds_bg {
     width:100%;
     height:100%;
     position:absolute;
-    top:10;
-    left:10;
     z-index:120;
 }
 
